fix(api-header): tags and views overflows under the sticky navbar
fix gravitee-io/issues#3053

--- a/src/portal/api/_api.scss
+++ b/src/portal/api/_api.scss
@@ -290,7 +290,9 @@ div#api-navbar:before{
 }
 
 
-#pageHeader.sticky #header-detail {
+#pageHeader.sticky #header-detail,
+#pageHeader.sticky #header-tags,
+#pageHeader.sticky #header-views {
   opacity: 0;
 }
 
